tests/it/unit/snapshots/it__unit__snapshot_tests__canvas_item_arrow.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 170
expression: item
---
{
  "id": 11,
  "position": [
    50.0,
    50.0
  ],
  "size": [
    200.0,
    100.0
  ],
  "content": {
    "Arrow": {
      "end_offset": [
        200.0,
        100.0
      ],
      "color": "#ff5500",
      "thickness": 3.0,
      "head_style": "Arrow"
    }
  }
}
