tests/it/unit/snapshots/it__unit__snapshot_tests__canvas_item_chart.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 241
expression: item
---
{
  "id": 15,
  "position": [
    500.0,
    500.0
  ],
  "size": [
    400.0,
    300.0
  ],
  "content": {
    "Chart": {
      "data_source_id": 100,
      "source_item_id": 14,
      "config": {
        "chart_type": "Bar",
        "x_column": 0,
        "y_columns": [
          1,
          2
        ],
        "title": "Sales by Region",
        "show_legend": true,
        "aggregation": "Sum",
        "sort_order": "ValueDesc"
      }
    }
  }
}
