tests/it/unit/snapshots/it__unit__snapshot_tests__canvas_item_code.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 139
expression: item
---
{
  "id": 9,
  "position": [
    500.0,
    200.0
  ],
  "size": [
    200.0,
    36.0
  ],
  "content": {
    "Code": {
      "path": "/src/main.rs",
      "language": "rust"
    }
  }
}
