tests/it/unit/snapshots/it__unit__snapshot_tests__data_cell_boolean_false.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 371
expression: cell
---
{
  "Boolean": false
}
