tests/it/unit/snapshots/it__unit__snapshot_tests__data_origin_api.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 413
expression: origin
---
{
  "Api": {
    "url": "https://api.example.com/data",
    "last_fetched": 1704067200
  }
}
